# TransactionInfo-TestTask

./: README.md  pyproject.toml
src/: main.py
